# text_generator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: Gazdanov (1).txt  generate.py
text_generator/: __init__.py  dataset.py  layers.py  model.py  text_generator.py  train.py  utils.py
